# PeakRDL

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: argfiles.rst  best-practices.rst  community.rst  conf.py  configuring.rst  gallery.rst  index.rst  licensing.rst  processing-input.rst  requirements.txt  style-guide.rst  systemrdl-tutorial.rst
docs/for-devs/: cfg_schema.rst  descriptors.rst  exporter-plugin.rst  importer-plugin.rst  rdl_gotchas.rst
examples/: atxmega_spi.h  atxmega_spi.rdl  atxmega_spi.xml  atxmega_spi_bf.h  atxmega_spi_uvm_pkg.sv
examples/regblock/: atxmega_spi.sv  atxmega_spi_pkg.sv
peakrdl/: peakrdl_toolchain.py  pyproject.toml
peakrdl-cli/: README.md  pyproject.toml
peakrdl-cli/src/peakrdl/: __about__.py  argfile.py  importer.py  main.py  process_input.py  subcommand.py
peakrdl-cli/src/peakrdl/cmd/: dump.py  list_globals.py
peakrdl-cli/src/peakrdl/config/: loader.py  schema.py
peakrdl-cli/src/peakrdl/plugins/: entry_points.py  exporter.py  importer.py
ralbot/: __init__.py
src/peakrdl/: importer.py  main.py  process_input.py  subcommand.py
src/peakrdl/cmd/: dump.py  list_globals.py  preprocess.py
src/peakrdl/config/: discover.py  loader.py  schema.py
src/peakrdl/plugins/: entry_points.py  exporter.py  importer.py
test/: .coveragerc  .gitignore  mypy.ini  pylint.rc  requirements.txt  run.sh  test_argfile.py  test_basics.py  test_cfg.py  test_cfg_schema.py  test_core_commands.py  test_import.py  testcases.sh  unittest_utils.py
test/testdata/: bad_plugin.toml  bad_pythonpath.toml  circular.f  dummy_exporter.py  dummy_importer.py  dump_nested.f  dump_nested_env1.f  dump_nested_env2.f  dump_nested_this_dir.f  parameters.rdl  peakrdl.toml  structural.rdl  structural.xml
test/testdata/toml_dir1/: peakrdl.toml
test/testdata/toml_dir2/: .peakrdl.toml
