[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-cli"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "systemrdl-compiler ~= 1.27",
    "tomli;python_version<'3.11'",
]

authors = [
    {name="Alex Mykyta"},
]
description = "Command-line tool for control/status register automation and code generation."
readme = "README.md"
license = {text = "LGPLv3"}
keywords = [
    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
    "C", "header", "software", "Verilog", "SystemVerilog", "register abstraction layer",
    "FPGA", "ASIC",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Source = "https://github.com/SystemRDL/PeakRDL"
Tracker = "https://github.com/SystemRDL/PeakRDL/issues"
Changelog = "https://github.com/SystemRDL/PeakRDL/releases"
Documentation = "https://peakrdl.readthedocs.io/"

[tool.setuptools.dynamic]
version = {attr = "peakrdl.__about__.__version__"}

[project.scripts]
peakrdl = "peakrdl.main:main"
