[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "peakrdl-cli",
    "peakrdl-html >= 2.10.1, < 3",
    "peakrdl-ipxact >= 3.4.1, < 4",
    "peakrdl-regblock >= 0.19.0, < 2",
    "peakrdl-systemrdl >= 0.3.0, < 2",
    "peakrdl-uvm >= 2.3.0, < 3",
    "peakrdl-cheader >= 1.0.0, < 2",
]

authors = [
    {name="Alex Mykyta"},
]
description = "Toolchain for control/status register automation and code generation."
readme = "README.md"
license = {text = "GPLv3"}
keywords = [
    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
    "C", "header", "software", "Verilog", "SystemVerilog", "register abstraction layer",
    "FPGA", "ASIC",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Source = "https://github.com/SystemRDL/PeakRDL"
Tracker = "https://github.com/SystemRDL/PeakRDL/issues"
Changelog = "https://github.com/SystemRDL/PeakRDL/releases"
Documentation = "https://peakrdl.readthedocs.io/"

[tool.setuptools.dynamic]
version = {attr = "peakrdl_toolchain.__version__"}
